--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           <div class="col-lg-6">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/values-1.png" class="img-fluid" alt="">
+              <img src="assets/img/Android.png" class="img-fluid" alt="">
               <h3>kuliah pakar android</h3>
               <p>Merupakan seminar pemograman android. </p>
               <a href="https://docs.google.com/forms/d/1ihKjcvL0gG5svuyCOMA-dGtZ3EXbfGL-TTEaR33Pr4U/viewform?edit_requested=true"
@@ -149,7 +149,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="400">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
+              <img src="assets/img/values-1.png" class="img-fluid" alt="">
               <h3>kuliah umum digital businees</h3>
               <p>Merupakan kuliah umum tentang bagaimana mengembangkan bisnis dengan teknologi digital.</p>
               <a href="https://docs.google.com/forms/d/18-6U90bQXJDHhYjbyIMnq5IRCphoVDyNp0expgXykec/viewform?edit_requested=true"
@@ -168,7 +168,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="600">
-              <img src="assets/img/values-3.png" class="img-fluid" alt="">
+              <img src="assets/img/features-2.png" class="img-fluid" alt="">
               <h3>Lomba Web Design.</h3>
               <p>Merupakan lomba Re-desain UI website dari yang sudah ada yaitu website umpwr.ac.id, ti.umpwr.ac.id,
                 akproject.tech</p>
@@ -181,7 +181,7 @@
           </div>
           <div class="col-lg-4">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/values-1.png" class="img-fluid" alt="">
+              <img src="assets/img/values-7.png" class="img-fluid" alt="">
               <h3>Video Creative</h3>
               <p>Merupakan lomba membuat video kreatif dengan dengan menggunakan platform Tiktok. </p>
               <a href="https://docs.google.com/forms/d/1rmadHWiyMfgX8VfB05acAGYOwSlc0nJ4teRXRVdvmZo/viewform?edit_requested=true"
@@ -194,7 +194,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="400">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
+              <img src="assets/img/e-sport.png" class="img-fluid" alt="">
               <h3>E-Sport ( 16 Tim)</h3>
               <p>Merupakan lomba game online Mobile Legend. </p>
               <a href="https://docs.google.com/forms/d/1fehOpmkOTfNLWYafdTRPqUV9XK3o3h4Yo4DRjkfACW8/viewform?edit_requested=true"
@@ -222,9 +222,7 @@
             <div class="count-box ">
               <i class="bi bi-emoji-smile"></i>
               <div>
-                <p>Organized by :</p>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
-                  class="purecounter"></span>
+                <img src="" alt="">
 
               </div>
             </div>
@@ -319,15 +317,15 @@
 
               <div class="tab-pane fade show active" id="tab1">
 
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Kuliah Pakar Android</h5>
                     <h4 style="text-align: end;">13 Februari 2021</h4>
                   </div>
                 </div>
 
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Kuliah Umum Digital Bussiness</h5>
                     <h4 style="text-align: end;">15 Februari 2021</h4>
                   </div>
@@ -336,29 +334,29 @@
 
 
               <div class="tab-pane fade show" id="tab2">
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Pendaftaran Peserta</h5>
                     <h4 style="text-align: end;">8-15 Februari 2021</h4>
                   </div>
                 </div>
 
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Pengumpulan Karya</h5>
                     <h4 style="text-align: end;"> 15-22 Februari 2021</h4>
                   </div>
                 </div>
 
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Penjurian Karyana</h5>
                     <h4 style="text-align: end;">23-24 Februari 2021</h4>
                   </div>
                 </div>
 
-                <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                  <div class="feature-box d-flex align-items-center">
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Pengumuman & Pemberian Hadiah </h5>
                     <h4 style="text-align: end;"> 25 Februari 2021</h4>
                   </div>
@@ -367,15 +365,15 @@
 
               <div class="tab-pane fade show" id="tab3">
                 <div class="tab-pane fade show" id="tab2">
-                  <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                    <div class="feature-box d-flex align-items-center">
+                  <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                    <div class="feature-box ">
                       <h5>Pendaftaran Peserta</h5>
                       <h4 style="text-align: end;">8-18 Februari 2021</h4>
                     </div>
                   </div>
 
-                  <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                    <div class="feature-box d-flex align-items-center">
+                  <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                    <div class="feature-box ">
                       <h5>Technical Meeting Via Online</h5>
                       <h4 style="text-align: end;">19 Februari 2021</h4>
                     </div>
@@ -384,15 +382,15 @@
 
 
 
-                  <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                    <div class="feature-box d-flex align-items-center">
+                  <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                    <div class="feature-box ">
                       <h5>Tournament E-Sport</h5>
                       <h4 style="text-align: end;"> 21 Februari 2021</h4>
                     </div>
                   </div>
 
-                  <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
-                    <div class="feature-box d-flex align-items-center">
+                  <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                    <div class="feature-box ">
                       <h5>Pengumuman & Pembagian Hadiah</h5>
                       <h4 style="text-align: end;">25 Februari 2021</h4>
                     </div>
@@ -423,7 +421,7 @@
               <p>Term & Condition</p>
             </header>
 
-            <div class="row">
+            <div class="row d-flex justify-content-center" >
               <div class="col-lg-8">
                 <!-- F.A.Q List 1-->
                 <div class="accordion accordion-flush" id="faqlist1">
@@ -525,12 +523,12 @@
 
           <div class="col-lg-6 col-md-6 portfolio-item filter-app align-items-center">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/poster neon.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/WebinarAndroid.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>PSTI Weeks</h4>
+                <h4>Webinar Android</h4>
                 <p>2021</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/poster neon.jpg" data-gallery="portfolioGallery"
+                  <a href="assets/img/portfolio/WebinarAndroid.jpg" data-gallery="portfolioGallery"
                     class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -540,13 +538,13 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-6 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/p4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/DigitalBusiness.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Webinar</h4>
+                <h4>Webinar Digital Buisness</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/p4.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/portfolio/DigitalBusiness.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="App 2"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -556,11 +554,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/p5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 1</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/p5.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/portfolio/p1
+                  .jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 2"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -570,11 +569,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/p6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 2</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/p6.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/portfolio/p3.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -582,6 +581,19 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/p2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Kompetisi 3</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/p2.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                    title="Card 3"><i class="bi bi-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </div>
