--- a/index.html
+++ b/index.html
@@ -116,11 +116,26 @@
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
-
         </div>
       </div>
-
     </section><!-- End About Section -->
+
+    <!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts">
+      <div class="container" data-aos="fade-up">
+        <div class="row gy-4 ">
+          <div class="col-lg-12 col-md-8 ">
+            <div class="count-box d-flex justify-content-center">
+              <div >
+                <p style="text-align: center;padding: 10px;">Organized by :</p>
+                <img style="height: 50px;" src="assets/img/psti.png" alt="">
+                <img style="height: 50px;" src="assets/img/logohima.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Counts Section -->
 
     <!-- ======= Values Section ======= -->
     <section id="values" class="values">
@@ -212,26 +227,7 @@
 
     </section><!-- End Values Section -->
 
-    <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
-      <div class="container" data-aos="fade-up">
 
-        <div class="row gy-4 ">
-
-          <div class="col-lg-12 col-md-8 align-items-center">
-            <div class="count-box ">
-              <i class="bi bi-emoji-smile"></i>
-              <div>
-                <img src="" alt="">
-
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Counts Section -->
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
@@ -409,92 +405,92 @@
         </div>
       </div>
     </section>
-        <!-- End Feature Tabs -->
+    <!-- End Feature Tabs -->
 
-        <!-- ======= F.A.Q Section ======= -->
-        <section id="faq" class="faq">
+    <!-- ======= F.A.Q Section ======= -->
+    <section id="faq" class="faq">
 
-          <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
 
-            <header class="section-header">
-              <h2>T&C</h2>
-              <p>Term & Condition</p>
-            </header>
+        <header class="section-header">
+          <h2>T&C</h2>
+          <p>Term & Condition</p>
+        </header>
 
-            <div class="row d-flex justify-content-center" >
-              <div class="col-lg-8">
-                <!-- F.A.Q List 1-->
-                <div class="accordion accordion-flush" id="faqlist1">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#faq-content-1" style="font-size: 20px;">
-                        Ketentuan umum / Persyaratan Event Web Design dan Video Creative :
-                      </button>
-                    </h2>
-                    <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
-                      <div class="accordion-body">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">1. Peserta adalah siswa/I aktif SMA/SMK sederajat yang dibuktikan
-                            dengan scan Kartu Pelajar.</li>
-                          <li class="list-group-item">2. Peserta merupakan perorangan/individu.</li>
-                          <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
-                            disediakan panitia.</li>
-                          <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 15.000 (Web
-                            Design), Rp 10.000 (Video Creative).</li>
-                          <li class="list-group-item">5. Teknik pembuatan website bebas.</li>
-                          <li class="list-group-item">6. Dipersilahkan menggunakan software UI/UX seperti Adobe XD,
-                            Figma atau semacamnya dan tidak boleh pakai template dari orang lain.</li>
-                          <li class="list-group-item">7. Isi desain tidak boleh mengandung atau menggunakan elemen atau
-                            materi yangdilindungi oleh hak cipta termasuk logo, karya foto, karya grafis, merek
-                            dagangdan sebagainya.</li>
-                          <li class="list-group-item">8. Isi tidak boleh mengandung Pornografi ataupun SARA.</li>
-                          <li class="list-group-item">9. Untuk peserta yang lolos ke tahap selanjutnya dan membuat
-                            dokumen presentasi, maka desain website yang di presentasikan harus sesuai dengan desain
-                            yangtelah dikirim ke pihak panitia.</li>
-                          <li class="list-group-item">10. Peserta diperbolehkan mengganti desain yang sudah dikirimkan
-                            maksimal sebanyak 1x sebelum batas pengumpulan file berakhir (25 Februari 2021) dengan
-                            subject Revisi Lomba Web Design HIMATEKNO 2021 – Nama Tim”.</li>
-                        </ul>
-                      </div>
-                    </div>
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-8">
+            <!-- F.A.Q List 1-->
+            <div class="accordion accordion-flush" id="faqlist1">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#faq-content-1" style="font-size: 20px;">
+                    Ketentuan umum / Persyaratan Event Web Design dan Video Creative :
+                  </button>
+                </h2>
+                <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
+                  <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">1. Peserta adalah siswa/I aktif SMA/SMK sederajat yang dibuktikan
+                        dengan scan Kartu Pelajar.</li>
+                      <li class="list-group-item">2. Peserta merupakan perorangan/individu.</li>
+                      <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
+                        disediakan panitia.</li>
+                      <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 15.000 (Web
+                        Design), Rp 10.000 (Video Creative).</li>
+                      <li class="list-group-item">5. Teknik pembuatan website bebas.</li>
+                      <li class="list-group-item">6. Dipersilahkan menggunakan software UI/UX seperti Adobe XD,
+                        Figma atau semacamnya dan tidak boleh pakai template dari orang lain.</li>
+                      <li class="list-group-item">7. Isi desain tidak boleh mengandung atau menggunakan elemen atau
+                        materi yangdilindungi oleh hak cipta termasuk logo, karya foto, karya grafis, merek
+                        dagangdan sebagainya.</li>
+                      <li class="list-group-item">8. Isi tidak boleh mengandung Pornografi ataupun SARA.</li>
+                      <li class="list-group-item">9. Untuk peserta yang lolos ke tahap selanjutnya dan membuat
+                        dokumen presentasi, maka desain website yang di presentasikan harus sesuai dengan desain
+                        yangtelah dikirim ke pihak panitia.</li>
+                      <li class="list-group-item">10. Peserta diperbolehkan mengganti desain yang sudah dikirimkan
+                        maksimal sebanyak 1x sebelum batas pengumpulan file berakhir (25 Februari 2021) dengan
+                        subject Revisi Lomba Web Design HIMATEKNO 2021 – Nama Tim”.</li>
+                    </ul>
                   </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#faq-content-2" style="font-size: 20px;">
-                        Ketentuan umum / Persyaratan Event E-Sport (Mobile Legend) :
-                      </button>
-                    </h2>
-                    <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
-                      <div class="accordion-body">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">1. Peserta lomba adalah siswa SMA/SMK/MA sederajat dan mahasiswa/i
-                            dan umum.</li>
-                          <li class="list-group-item">2. Peserta merupakan 1 tim berjumlah 5 orang.</li>
-                          <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
-                            disediakan panitia.</li>
-                          <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 25.000 .
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#faq-content-2" style="font-size: 20px;">
+                    Ketentuan umum / Persyaratan Event E-Sport (Mobile Legend) :
+                  </button>
+                </h2>
+                <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
+                  <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">1. Peserta lomba adalah siswa SMA/SMK/MA sederajat dan mahasiswa/i
+                        dan umum.</li>
+                      <li class="list-group-item">2. Peserta merupakan 1 tim berjumlah 5 orang.</li>
+                      <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
+                        disediakan panitia.</li>
+                      <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 25.000 .
+                      </li>
+                    </ul>
                   </div>
-
-
-
                 </div>
               </div>
 
 
 
             </div>
-
           </div>
 
-        </section><!-- End F.A.Q Section -->
+
+
+        </div>
 
       </div>
+
+    </section><!-- End F.A.Q Section -->
+
+    </div>
 
     </section><!-- End Features Section -->
 
@@ -544,8 +540,8 @@
               <div class="portfolio-info">
                 <h4>Webinar Digital Buisness</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/DigitalBusiness.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
-                    title="App 2"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/DigitalBusiness.jpg" data-gallery="portfolioGallery"
+                    class="portfokio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
@@ -559,8 +555,8 @@
                 <h4>Kompetisi 1</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/p1
-                  .jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
-                    title="Card 2"><i class="bi bi-plus"></i></a>
+                  .jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
+                      class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
