--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
           <p>Term & Condition</p>
         </header>
 
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center bg-light">
           <div class="col-lg-8">
             <!-- F.A.Q List 1-->
             <div class="accordion accordion-flush" id="faqlist1">
@@ -502,7 +502,7 @@
 
         <header class="section-header">
           <h2>Event</h2>
-          <p>check out the agenda here</p>
+          <p>Lihat Agenda PSTI Weeks di sini</p>
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
