--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <div class="count-box d-flex justify-content-center">
               <div >
                 <p style="text-align: center;padding: 10px;">Organized by :</p>
-                <img style="height: 50px;" src="assets/img/psti.png" alt="">
-                <img style="height: 50px;" src="assets/img/logohima.png" alt="">
+                <img style="height: 50px;margin-right: 10px;" src="assets/img/psti.png" alt="">
+                <img style="height: 50px;margin-left: 10px;" src="assets/img/logohima.png" alt="">
               </div>
             </div>
           </div>
@@ -248,31 +248,31 @@
           <div class="col-lg-6 mt-5 mt-lg-0 d-flex">
             <div class="row align-self-center gy-4">
 
-              <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
+              <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                 <div class="feature-box d-flex align-items-center">
                   <i>1</i>
                   <h3 style="margin-right: 15px;">1st Winner </h3>
-                  <h4>E-Sertifikat Uang Pembinaan E-Piagam</h4>
+                  <h4>E-Sertifikat, Uang Pembinaan, E-Piagam</h4>
                 </div>
               </div>
 
-              <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
+              <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                 <div class="feature-box d-flex align-items-center">
                   <i>2</i>
                   <h3 style="margin-right: 15px;">2st Winner </h3>
-                  <h4>E-Sertifikat Uang Pembinaan E-Piagam</h4>
+                  <h4>E-Sertifikat, Uang Pembinaan, E-Piagam</h4>
                 </div>
               </div>
 
-              <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
+              <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                 <div class="feature-box d-flex align-items-center">
                   <i>3</i>
                   <h3 style="margin-right: 15px;">3st Winner </h3>
-                  <h4>E-Sertifikat Uang Pembinaan E-Piagam</h4>
+                  <h4>E-Sertifikat, Uang Pembinaan, E-Piagam</h4>
                 </div>
               </div>
 
-              <div class="col-md-8" data-aos="zoom-out" data-aos-delay="200">
+              <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3 style="margin-right: 15px;">Semua Peserta </h3>
@@ -399,7 +399,7 @@
           </div>
 
           <div class="col-lg-6">
-            <img src="assets/img/features-2.png" class="img-fluid" alt="">
+            <img src="assets/img/values-3.png" class="img-fluid" alt="">
           </div>
 
         </div>
