update minor link
memperbaiki kesalahan di masa lalu

--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
             <div class="box" data-aos="fade-up" data-aos-delay="600">
               <img src="assets/img/features-2.png" class="img-fluid" alt="">
               <h3>Lomba Web Design.</h3>
-              <p>Merupakan lomba Re-desain UI website dari yang sudah ada yaitu website umpwr.ac.id, ti.umpwr.ac.id,
-                akproject.tech</p>
+              <p>Merupakan lomba Re-desain UI website dari yang sudah ada yaitu website <a href="http://umpwr.ac.id/">umpwr.ac.id, </a><a href="http://ti.umpwr.ac.id/">ti.umpwr.ac.id, </a><a href="https://akproject.tech/">akproject.tech.</a></p>
               <a href="https://docs.google.com/forms/d/1rmadHWiyMfgX8VfB05acAGYOwSlc0nJ4teRXRVdvmZo/viewform?edit_requested=true"
                 class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Daftar </span>
@@ -522,11 +521,11 @@
               <img src="assets/img/portfolio/WebinarAndroid.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Webinar Android</h4>
-                <p>2021</p>
+                <p>Introduction to Android Development for Beginner</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/WebinarAndroid.jpg" data-gallery="portfolioGallery"
                     class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="https://docs.google.com/forms/d/1ihKjcvL0gG5svuyCOMA-dGtZ3EXbfGL-TTEaR33Pr4U/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -539,10 +538,11 @@
               <img src="assets/img/portfolio/DigitalBusiness.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Webinar Digital Buisness</h4>
+                <p>Membangun Bisnis Digital di Marketplace</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/DigitalBusiness.jpg" data-gallery="portfolioGallery"
                     class="portfokio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="https://docs.google.com/forms/d/18-6U90bQXJDHhYjbyIMnq5IRCphoVDyNp0expgXykec/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -553,11 +553,12 @@
               <img src="assets/img/portfolio/p1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 1</h4>
+                <p>Web Design</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/p1
                   .jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
                       class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="https://docs.google.com/forms/d/1rmadHWiyMfgX8VfB05acAGYOwSlc0nJ4teRXRVdvmZo/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -568,10 +569,11 @@
               <img src="assets/img/portfolio/p3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 2</h4>
+                <p>Creative Video</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/p3.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="https://docs.google.com/forms/d/1rmadHWiyMfgX8VfB05acAGYOwSlc0nJ4teRXRVdvmZo/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -582,10 +584,11 @@
               <img src="assets/img/portfolio/p2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 3</h4>
+                <p>E-Sport</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/p2.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="https://docs.google.com/forms/d/1fehOpmkOTfNLWYafdTRPqUV9XK3o3h4Yo4DRjkfACW8/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
