Final final update

--- a/index.html
+++ b/index.html
@@ -555,8 +555,7 @@
                 <h4>Kompetisi 1</h4>
                 <p>Web Design</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/p1
-                  .jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
+                  <a href="assets/img/portfolio/p1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
                       class="bi bi-plus"></i></a>
                   <a href="https://docs.google.com/forms/d/1rmadHWiyMfgX8VfB05acAGYOwSlc0nJ4teRXRVdvmZo/viewform?edit_requested=true" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
