--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#faq-content-1" style="font-size: 20px;">
-                    Ketentuan umum / Persyaratan Event Web Design dan Video Creative :
+                    Ketentuan umum / Persyaratan Event Web Design :
                   </button>
                 </h2>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
@@ -435,8 +435,7 @@
                       <li class="list-group-item">2. Peserta merupakan perorangan/individu.</li>
                       <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
                         disediakan panitia.</li>
-                      <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 15.000 (Web
-                        Design), Rp 10.000 (Video Creative).</li>
+                      <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 15.000 (Web Design)</li>
                       <li class="list-group-item">5. Teknik pembuatan website bebas.</li>
                       <li class="list-group-item">6. Dipersilahkan menggunakan software UI/UX seperti Adobe XD,
                         Figma atau semacamnya dan tidak boleh pakai template dari orang lain.</li>
@@ -454,6 +453,30 @@
                   </div>
                 </div>
               </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#faq-content-2" style="font-size: 20px;">
+                    Ketentuan umum / Persyaratan Video Creative:
+                  </button>
+                </h2>
+                <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
+                  <div class="accordion-body">
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">1. Peserta lomba adalah siswa SMA/SMK/MA sederajat dan mahasiswa/i</li>
+                      <li class="list-group-item">2. Peserta merupakan perorangan/individu.</li>
+                      <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
+                        disediakan panitia.</li>
+                      <li class="list-group-item">4. Peserta telah melunasi biaya pendaftaran sebesar Rp 10.000 (Video Creative).</li>
+                      <li class="list-group-item">5.Karya yang dikumpulkan harus sesuai dengan tema dan kriteria penilaian.</li>
+                      <li class="list-group-item">6. Untuk konten video creative kirimkan link video TikTok ke google form.</li>
+                      <li class="list-group-item">7. Video tidak boleh mengandung Pornografi ataupun SARA</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
