update whatsapp privew

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>PSTI Weeks</title>
-  <meta content="" name="description">
 
-  <meta content="" name="keywords">
+         <!-- WhatsApp Privew -->
+         <meta name="description" content="PSTI Weeks Teknologi Informasi">
+         <meta property="og:title" content="Teknologi Informasi" />
+         <meta property="og:url" content="https://pstiweeks.tech/" />
+         <meta property="og:description" content="Teknologi Informasi Univeristas Muhammadiyah Purworejo.">
+         <meta property="og:image" content="https://pstiweeks.tech/assets/img/favicon.ico">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
