--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="600">
               <img src="assets/img/snee.svg" class="img-fluid" alt="">
-              <h3>Student Network Engineer.</h3>
+              <h3>Student Network Engineer</h3>
               <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfBnqeY_B1EHFFEoklGfN0WA5CQoPxr_zSjRueUryBt2SLqTQ/viewform?usp=sf_link" role="button">Daftar<i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
