--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@
                   <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                     <div class="feature-box ">
                       <h5>Pendaftaran Peserta</h5>
-                      <h4 style="text-align: end;">20 Januari - 30 Februari 2022</h4>
+                      <h4 style="text-align: end;">20 Januari - 4 Februari 2022</h4>
                     </div>
                   </div>
 
                   <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                     <div class="feature-box ">
                       <h5>Technical Meeting</h5>
-                      <h4 style="text-align: end;">1 Februari 2022</h4>
+                      <h4 style="text-align: end;">4 Februari 2022</h4>
                     </div>
                   </div>
 
@@ -468,12 +468,10 @@
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item">1. Peserta lomba adalah mahasiswa Program Studi Teknologi Informasi</li>
-                      <li class="list-group-item">2. Peserta merupakan perorangan/individu.</li>
-                      <li class="list-group-item">3. Mendaftar secara online di link pendaftaran yang telah
-                        disediakan panitia.</li>
-                      <li class="list-group-item">4. Biaya Pendaftaran Rp 100.000.</li>
-                      <li class="list-group-item">5. Mengumpulkan fotocopy krs semester terakhir.</li>
+                      <li class="list-group-item">1. Mahasiswa aktif Prodi Teknologi Informasi</li>
+                      <li class="list-group-item">2. Setiap tim merupakan perwakilan wajib dari setiap kelas per semester.</li>
+                      <li class="list-group-item">3. Mengumpulkan Fotocopy KRS semester akhir.</li>
+                      <li class="list-group-item">4. Pembayaran paling lambat tanggal 10 Februari 2022.</li>
                     </ul>
                   </div>
                 </div>
