--- a/index.html
+++ b/index.html
@@ -541,12 +541,12 @@
 
             <div class="col-lg-3 col-md-6 portfolio-item filter-app align-items-center">
               <div class="portfolio-wrap">
-                <img src="assets/img/2022/pakar.jpg" class="img-fluid" alt="">
+                <img src="assets/img/2022/kuliahpakar.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kuliah Pakar Machine Learning</h4>
                   <p>Introduction to Android Development for Beginner</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/2022/pakar.jpg" data-gallery="portfolioGallery"
+                    <a href="assets/img/2022/kuliahpakar.jpg" data-gallery="portfolioGallery"
                       class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeoKQiiYkyDT_Ir2jwAs9ALCdCvu3qR5LKEDmM1rkkWX24HJQ/viewform?usp=sf_link" title="More Details"><i class="bi bi-link"></i></a>
                   </div>
@@ -573,12 +573,12 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/2022/sne2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/2022/sne.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 1</h4>
                 <p>Student Network Engineer</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/2022/sne2.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
+                  <a href="assets/img/2022/sne.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i
                       class="bi bi-plus"></i></a>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBnqeY_B1EHFFEoklGfN0WA5CQoPxr_zSjRueUryBt2SLqTQ/viewform?usp=sf_link" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -588,12 +588,12 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/2022/futsal3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/2022/futsal.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 2</h4>
                 <p>Kompetisi Futsal</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/2022/futsal3.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/2022/futsal.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSevxE_MuoHX_6N4H8MNacVjH5to9ewvdCB-v_Rf86MTHDRDhA/viewform?usp=sf_link" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
@@ -603,12 +603,12 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/2022/esport.jpg" class="img-fluid" alt="">
+              <img src="assets/img/2022/ml.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 3</h4>
                 <p>E-Sport</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/2022/esport.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/2022/ml.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSf3XY8EeLvL-JV-WBIE-TncBcoqr0nAylDszQqLROPi1rwt4Q/viewform?usp=sf_link" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
