update flayer futsal

--- a/index.html
+++ b/index.html
@@ -588,12 +588,12 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/2022/futsal.jpg" class="img-fluid" alt="">
+              <img src="assets/img/2022/futsal.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kompetisi 2</h4>
                 <p>Kompetisi Futsal</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/2022/futsal.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox"
+                  <a href="assets/img/2022/futsal.jpeg" data-gallery="portfolioGallery" class="portfokio-lightbox"
                     title="Card 3"><i class="bi bi-plus"></i></a>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSevxE_MuoHX_6N4H8MNacVjH5to9ewvdCB-v_Rf86MTHDRDhA/viewform?usp=sf_link" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
