--- a/index.html
+++ b/index.html
@@ -449,10 +449,11 @@
                         disediakan panitia.</li>
                       <li class="list-group-item">4. Melampirkan kota asal.</li>
                       <li class="list-group-item">5. Perlombaan sesuai dengan soal yang diberikan.</li>
-                      <li class="list-group-item">6. Hasil pengumpulan berupa video youtube minimal 5 menit (dengan penjelasan) .</li>
-                      <li class="list-group-item">7. Hasil yang dilombakan merupakan yang terbaru (tidak pernah dikutsertakan lomba sebelumnya).</li>
-                      <li class="list-group-item">8. Segala bentuk kecurangan akan didiskualifikasi.</li>
-                      <li class="list-group-item">9. Keputusan juri tidak dapat diganggu gugat.</li>
+                      <li class="list-group-item">6. Soal akan diberikan pada tanggal 10 Februari 2022.</li>
+                      <li class="list-group-item">7. Hasil pengumpulan berupa video youtube minimal 5 menit (dengan penjelasan) .</li>
+                      <li class="list-group-item">8. Hasil yang dilombakan merupakan yang terbaru (tidak pernah dikutsertakan lomba sebelumnya).</li>
+                      <li class="list-group-item">9. Segala bentuk kecurangan akan didiskualifikasi.</li>
+                      <li class="list-group-item">10. Keputusan juri tidak dapat diganggu gugat.</li>
                     </ul>
                   </div>
                 </div>
