update timeline sne

--- a/index.html
+++ b/index.html
@@ -328,6 +328,13 @@
 
                 <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
                   <div class="feature-box ">
+                    <h5>Pembagian Soal</h5>
+                    <h4 style="text-align: end;"> 10 Februari 2022</h4>
+                  </div>
+                </div>
+                
+                <div class="col-md-12" data-aos="zoom-out" data-aos-delay="200">
+                  <div class="feature-box ">
                     <h5>Penjurian</h5>
                     <h4 style="text-align: end;"> 16 Februari 2022</h4>
                   </div>
@@ -449,11 +456,10 @@
                         disediakan panitia.</li>
                       <li class="list-group-item">4. Melampirkan kota asal.</li>
                       <li class="list-group-item">5. Perlombaan sesuai dengan soal yang diberikan.</li>
-                      <li class="list-group-item">6. Soal akan diberikan pada tanggal 10 Februari 2022.</li>
-                      <li class="list-group-item">7. Hasil pengumpulan berupa video youtube minimal 5 menit (dengan penjelasan) .</li>
-                      <li class="list-group-item">8. Hasil yang dilombakan merupakan yang terbaru (tidak pernah dikutsertakan lomba sebelumnya).</li>
-                      <li class="list-group-item">9. Segala bentuk kecurangan akan didiskualifikasi.</li>
-                      <li class="list-group-item">10. Keputusan juri tidak dapat diganggu gugat.</li>
+                      <li class="list-group-item">6. Hasil pengumpulan berupa video youtube minimal 5 menit (dengan penjelasan) .</li>
+                      <li class="list-group-item">7. Hasil yang dilombakan merupakan yang terbaru (tidak pernah dikutsertakan lomba sebelumnya).</li>
+                      <li class="list-group-item">8. Segala bentuk kecurangan akan didiskualifikasi.</li>
+                      <li class="list-group-item">9. Keputusan juri tidak dapat diganggu gugat.</li>
                     </ul>
                   </div>
                 </div>
